standards/gnds-2.0/test/c/src/v2.0/pops/PositronEmissionIntensity.h


// THIS FILE WAS AUTOGENERATED!
// DO NOT MODIFY!

// Interface for C
// This header file is designed to work with both C and C++
// Function definitions are in this file's .cpp source

// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------
// Instructions for Users
//
// Constructs you're MORE likely to care about are preceded with:
//    // +++ remark
// Constructs you're LESS likely to care about are preceded with:
//    // --- remark
// Anything not marked as above can be ignored by most users.
//
// PositronEmissionIntensity is the basic handle type in this file. Example:
//    // Create a default PositronEmissionIntensity object:
//    PositronEmissionIntensity handle = PositronEmissionIntensityDefault();
// Functions involving PositronEmissionIntensity are declared throughout this file.
// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------


// -----------------------------------------------------------------------------
// Preliminaries
// -----------------------------------------------------------------------------

#ifndef C_INTERFACE_TEST_V2_0_POPS_POSITRONEMISSIONINTENSITY
#define C_INTERFACE_TEST_V2_0_POPS_POSITRONEMISSIONINTENSITY

#include "GNDStk.h"
#include "v2.0/pops/Uncertainty.h"

#ifdef __cplusplus
   #define extern_c extern "C"
#else
   #define extern_c
#endif

// Proxy C struct for the handled C++ class
struct PositronEmissionIntensityClass { };


// -----------------------------------------------------------------------------
// Handle types
// -----------------------------------------------------------------------------

// +++ PositronEmissionIntensity
// +++ General handle, suitable for most users. If you're not concerned about
// +++ strict "const correctness" in your C code, you can probably use this in
// +++ place of any function parameter of a const-aware handle type.
typedef struct PositronEmissionIntensityClass *PositronEmissionIntensity;

// --- Const-aware handles.
typedef const struct PositronEmissionIntensityClass *const ConstHandle2ConstPositronEmissionIntensity;
typedef       struct PositronEmissionIntensityClass *const ConstHandle2PositronEmissionIntensity;
typedef const struct PositronEmissionIntensityClass *      Handle2ConstPositronEmissionIntensity;
typedef       struct PositronEmissionIntensityClass *      Handle2PositronEmissionIntensity;


// -----------------------------------------------------------------------------
// Basics
// Create, Assign, Delete
// -----------------------------------------------------------------------------

// --- Create, default, const
extern_c Handle2ConstPositronEmissionIntensity
PositronEmissionIntensityDefaultConst();

// +++ Create, default
extern_c Handle2PositronEmissionIntensity
PositronEmissionIntensityDefault();

// --- Create, general, const
extern_c Handle2ConstPositronEmissionIntensity
PositronEmissionIntensityCreateConst(
   const Float64 value,
   ConstHandle2ConstUncertainty uncertainty
);

// +++ Create, general
extern_c Handle2PositronEmissionIntensity
PositronEmissionIntensityCreate(
   const Float64 value,
   ConstHandle2ConstUncertainty uncertainty
);

// +++ Assign
// +++ Use this to assign one handled object to another. Don't assign handles,
// +++ as with to = from. That has a meaning that you probably don't intend.
extern_c void
PositronEmissionIntensityAssign(ConstHandle2PositronEmissionIntensity This, ConstHandle2ConstPositronEmissionIntensity from);

// +++ Delete
// +++ We'll attempt to remove no-longer-used objects automatically, but you
// +++ may improve performance if you delete them when you're done with them.
extern_c void
PositronEmissionIntensityDelete(ConstHandle2ConstPositronEmissionIntensity This);


// -----------------------------------------------------------------------------
// I/O
// Read, Write, Print
// Each returns 0 if failure, 1 if success.
// -----------------------------------------------------------------------------

// +++ Read from file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll examine the file's contents to determine its type automatically.
extern_c int
PositronEmissionIntensityRead(ConstHandle2PositronEmissionIntensity This, const char *const filename);

// +++ Write to file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll use filename's extension to determine the type you want written.
extern_c int
PositronEmissionIntensityWrite(ConstHandle2ConstPositronEmissionIntensity This, const char *const filename);

// +++ Print to standard output, in our prettyprinting format
extern_c int
PositronEmissionIntensityPrint(ConstHandle2ConstPositronEmissionIntensity This);

// +++ Print to standard output, as XML
extern_c int
PositronEmissionIntensityPrintXML(ConstHandle2ConstPositronEmissionIntensity This);

// +++ Print to standard output, as JSON
extern_c int
PositronEmissionIntensityPrintJSON(ConstHandle2ConstPositronEmissionIntensity This);


// -----------------------------------------------------------------------------
// Metadatum: value
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
PositronEmissionIntensityValueHas(ConstHandle2ConstPositronEmissionIntensity This);

// +++ Get
// +++ Returns by value
extern_c Float64
PositronEmissionIntensityValueGet(ConstHandle2ConstPositronEmissionIntensity This);

// +++ Set
extern_c void
PositronEmissionIntensityValueSet(ConstHandle2PositronEmissionIntensity This, const Float64 value);


// -----------------------------------------------------------------------------
// Child: uncertainty
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
PositronEmissionIntensityUncertaintyHas(ConstHandle2ConstPositronEmissionIntensity This);

// --- Get, const
extern_c Handle2ConstUncertainty
PositronEmissionIntensityUncertaintyGetConst(ConstHandle2ConstPositronEmissionIntensity This);

// +++ Get, non-const
extern_c Handle2Uncertainty
PositronEmissionIntensityUncertaintyGet(ConstHandle2PositronEmissionIntensity This);

// +++ Set
extern_c void
PositronEmissionIntensityUncertaintySet(ConstHandle2PositronEmissionIntensity This, ConstHandle2ConstUncertainty uncertainty);


// -----------------------------------------------------------------------------
// Done
// -----------------------------------------------------------------------------

#undef extern_c
#endif