versions/GNDS-v2.0/GNDS/fortran/src/v2.0/general/PositronEmissionIntensity.f03


!! THIS FILE WAS AUTOGENERATED!
!! DO NOT MODIFY!

module generalPositronEmissionIntensity
use iso_c_binding
interface


!! -----------------------------------------------------------------------------
!! Basics
!! Create, Assign, Delete
!! -----------------------------------------------------------------------------

!! Create, default, const
function PositronEmissionIntensityDefaultConst() &
      bind(C, name='PositronEmissionIntensityDefaultConst') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr) :: handle
end function PositronEmissionIntensityDefaultConst

!! Create, default
function PositronEmissionIntensityDefault() &
      bind(C, name='PositronEmissionIntensityDefault') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr) :: handle
end function PositronEmissionIntensityDefault

!! Create, general, const
function PositronEmissionIntensityCreateConst( &
   value, &
   uncertainty &
) &
      bind(C, name='PositronEmissionIntensityCreateConst') &
      result(handle)
   use iso_c_binding
   implicit none
   real(c_double), value, intent(in) :: value
   type(c_ptr), value :: uncertainty
   type(c_ptr) :: handle
end function PositronEmissionIntensityCreateConst

!! Create, general
function PositronEmissionIntensityCreate( &
   value, &
   uncertainty &
) &
      bind(C, name='PositronEmissionIntensityCreate') &
      result(handle)
   use iso_c_binding
   implicit none
   real(c_double), value, intent(in) :: value
   type(c_ptr), value :: uncertainty
   type(c_ptr) :: handle
end function PositronEmissionIntensityCreate

!! Assign
subroutine PositronEmissionIntensityAssign(handleLHS, handleRHS) &
      bind(C, name='PositronEmissionIntensityAssign')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handleLHS, handleRHS
end subroutine PositronEmissionIntensityAssign

!! Delete
subroutine PositronEmissionIntensityDelete(handle) &
      bind(C, name='PositronEmissionIntensityDelete')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
end subroutine PositronEmissionIntensityDelete


!! -----------------------------------------------------------------------------
!! I/O
!! Read, Write, Print
!! Each returns 0 if failure, 1 if success.
!! -----------------------------------------------------------------------------

!! Read from file
function PositronEmissionIntensityRead(handle, filename, filenameSize) &
      bind(C, name='PositronEmissionIntensityRead') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: success
end function PositronEmissionIntensityRead

!! Write to file
function PositronEmissionIntensityWrite(handle, filename, filenameSize) &
      bind(C, name='PositronEmissionIntensityWrite') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: success
end function PositronEmissionIntensityWrite

!! Print to standard output, in our prettyprinting format
function PositronEmissionIntensityPrint(handle) &
      bind(C, name='PositronEmissionIntensityPrint') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function PositronEmissionIntensityPrint

!! Print to standard output, as XML
function PositronEmissionIntensityPrintXML(handle) &
      bind(C, name='PositronEmissionIntensityPrintXML') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function PositronEmissionIntensityPrintXML

!! Print to standard output, as JSON
function PositronEmissionIntensityPrintJSON(handle) &
      bind(C, name='PositronEmissionIntensityPrintJSON') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function PositronEmissionIntensityPrintJSON


!! -----------------------------------------------------------------------------
!! Metadatum: value
!! -----------------------------------------------------------------------------

!! Has
function PositronEmissionIntensityValueHas(handle) &
      bind(C, name='PositronEmissionIntensityValueHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function PositronEmissionIntensityValueHas

!! Get
function PositronEmissionIntensityValueGet(handle) &
      bind(C, name='PositronEmissionIntensityValueGet') &
      result(value)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   real(c_double) :: value
end function PositronEmissionIntensityValueGet

!! Set
subroutine PositronEmissionIntensityValueSet(handle, value, valueSize) &
      bind(C, name='PositronEmissionIntensityValueSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: valueSize
   character(c_char), intent(in) :: value(valueSize)
end subroutine PositronEmissionIntensityValueSet


!! -----------------------------------------------------------------------------
!! Child: uncertainty
!! -----------------------------------------------------------------------------

!! Has
function PositronEmissionIntensityUncertaintyHas(handle) &
      bind(C, name='PositronEmissionIntensityUncertaintyHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function PositronEmissionIntensityUncertaintyHas

!! Get, const
function PositronEmissionIntensityUncertaintyGetConst(handle) &
      bind(C, name='PositronEmissionIntensityUncertaintyGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function PositronEmissionIntensityUncertaintyGetConst

!! Get
function PositronEmissionIntensityUncertaintyGet(handle) &
      bind(C, name='PositronEmissionIntensityUncertaintyGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function PositronEmissionIntensityUncertaintyGet

!! Set
subroutine PositronEmissionIntensityUncertaintySet(handle, fieldHandle) &
      bind(C, name='PositronEmissionIntensityUncertaintySet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine PositronEmissionIntensityUncertaintySet


!! -----------------------------------------------------------------------------
!! -----------------------------------------------------------------------------

end interface
end module generalPositronEmissionIntensity
